--- a/Project.ipynb
+++ b/Project.ipynb
@@ -102,7 +102,10 @@
    "source": [
     "app_data[\"Content Rating\"].value_counts()\n",
     "mask1=app_data[\"Content Rating\"].isin([\"Everyone\",\"Teens\"])\n",
-    "app_data=app_data[mask1]"
+    "app_data=app_data[mask1]\n",
+    "\n",
+    "mask2=app_data[\"Type\"]==\"Free\"\n",
+    "app_data=app_data[mask2]"
    ]
   },
   {
@@ -253,14 +256,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4205, 11)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app_data.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,16 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4088, 5)"
+       "(3968, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +374,7 @@
        "(64295, 5)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +403,7 @@
        "(37427, 3)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +433,7 @@
        "Index(['App', 'Translated_Review', 'Sentiment'], dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,16 +460,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50531, 7)"
+       "(50100, 7)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +491,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +512,7 @@
        "Index(['Rating', 'Price', 'Android Ver', 'Translated_Review', 'Sentiment'], dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,16 +560,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1099857"
+       "1090359"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,16 +615,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1099857"
+       "1090359"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,16 +644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17650"
+       "17530"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,16 +675,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1000"
+       "2000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,16 +719,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50531"
+       "50100"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +748,7 @@
        "Index(['Rating', 'Price', 'Android Ver', 'Translated_Review', 'Sentiment'], dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -802,16 +818,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50529, 15)"
+       "(50098, 15)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +849,7 @@
        "Index(['Rating', 'Price', 'Android Ver', 'Sentiment'], dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +880,7 @@
        "Index(['Price', 'Android Ver'], dtype='object')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,16 +891,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50531, 1)"
+       "(50100, 1)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,16 +912,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50531, 1002)"
+       "(50100, 2002)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +950,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler=StandardScaler()\n",
+    "X_train=scaler.fit_transform(X_train)\n",
+    "X_test=scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -957,139 +985,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "building tree 1 of 100\n",
-      "building tree 2 of 100building tree 3 of 100\n",
-      "building tree 4 of 100\n",
+      "building tree 1 of 10building tree 2 of 10\n",
+      "building tree 3 of 10\n",
       "\n",
-      "building tree 5 of 100\n",
-      "building tree 6 of 100\n",
-      "building tree 7 of 100\n",
-      "building tree 8 of 100\n",
-      "building tree 9 of 100\n",
-      "building tree 10 of 100\n",
-      "building tree 11 of 100\n",
-      "building tree 12 of 100\n",
-      "building tree 13 of 100\n",
-      "building tree 14 of 100\n"
+      "building tree 4 of 10\n",
+      "building tree 5 of 10\n",
+      "building tree 6 of 10\n",
+      "building tree 7 of 10\n",
+      "building tree 8 of 10\n",
+      "building tree 9 of 10\n",
+      "building tree 10 of 10\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  10 tasks      | elapsed:  4.3min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 15 of 100\n",
-      "building tree 16 of 100\n",
-      "building tree 17 of 100\n",
-      "building tree 18 of 100\n",
-      "building tree 19 of 100\n",
-      "building tree 20 of 100\n",
-      "building tree 21 of 100\n",
-      "building tree 22 of 100\n",
-      "building tree 23 of 100\n",
-      "building tree 24 of 100\n",
-      "building tree 25 of 100\n",
-      "building tree 26 of 100\n",
-      "building tree 27 of 100\n",
-      "building tree 28 of 100\n",
-      "building tree 29 of 100\n",
-      "building tree 30 of 100\n",
-      "building tree 31 of 100\n",
-      "building tree 32 of 100\n",
-      "building tree 33 of 100\n",
-      "building tree 34 of 100\n",
-      "building tree 35 of 100\n",
-      "building tree 36 of 100\n",
-      "building tree 37 of 100\n",
-      "building tree 38 of 100\n",
-      "building tree 39 of 100\n",
-      "building tree 40 of 100\n",
-      "building tree 41 of 100\n",
-      "building tree 42 of 100\n",
-      "building tree 43 of 100\n",
-      "building tree 44 of 100\n",
-      "building tree 45 of 100\n",
-      "building tree 46 of 100\n",
-      "building tree 47 of 100\n",
-      "building tree 48 of 100\n",
-      "building tree 49 of 100\n",
-      "building tree 50 of 100\n",
-      "building tree 51 of 100\n",
-      "building tree 52 of 100\n",
-      "building tree 53 of 100\n",
-      "building tree 54 of 100\n",
-      "building tree 55 of 100\n",
-      "building tree 56 of 100\n",
-      "building tree 57 of 100\n",
-      "building tree 58 of 100\n",
-      "building tree 59 of 100\n",
-      "building tree 60 of 100\n",
-      "building tree 61 of 100\n",
-      "building tree 62 of 100\n",
-      "building tree 63 of 100\n",
-      "building tree 64 of 100\n",
-      "building tree 65 of 100\n",
-      "building tree 66 of 100\n",
-      "building tree 67 of 100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  64 tasks      | elapsed: 24.3min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 68 of 100\n",
-      "building tree 69 of 100\n",
-      "building tree 70 of 100\n",
-      "building tree 71 of 100\n",
-      "building tree 72 of 100\n",
-      "building tree 73 of 100\n",
-      "building tree 74 of 100\n",
-      "building tree 75 of 100\n",
-      "building tree 76 of 100\n",
-      "building tree 77 of 100\n",
-      "building tree 78 of 100\n",
-      "building tree 79 of 100\n",
-      "building tree 80 of 100\n",
-      "building tree 81 of 100\n",
-      "building tree 82 of 100\n",
-      "building tree 83 of 100\n",
-      "building tree 84 of 100\n",
-      "building tree 85 of 100\n",
-      "building tree 86 of 100\n",
-      "building tree 87 of 100\n",
-      "building tree 88 of 100\n",
-      "building tree 89 of 100\n",
-      "building tree 90 of 100\n",
-      "building tree 91 of 100\n",
-      "building tree 92 of 100\n",
-      "building tree 93 of 100\n",
-      "building tree 94 of 100\n",
-      "building tree 95 of 100\n",
-      "building tree 96 of 100\n",
-      "building tree 97 of 100\n",
-      "building tree 98 of 100\n",
-      "building tree 99 of 100\n",
-      "building tree 100 of 100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed: 37.4min finished\n"
+      "[Parallel(n_jobs=-1)]: Done   6 out of  10 | elapsed:  7.5min remaining:  5.0min\n",
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  9.9min finished\n"
      ]
     },
     {
@@ -1099,17 +1012,17 @@
        "           max_features='auto', max_leaf_nodes=None,\n",
        "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "           min_samples_leaf=1, min_samples_split=2,\n",
-       "           min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=-1,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=-1,\n",
        "           oob_score=False, random_state=None, verbose=5, warm_start=False)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regressor=RandomForestRegressor(n_estimators=100,verbose=5,n_jobs=-1)\n",
+    "regressor=RandomForestRegressor(n_estimators=100,verbose=3,n_jobs=-1)\n",
     "regressor.fit(X_train,y_train)"
    ]
   },
@@ -1129,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1137,9 +1050,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=4)]: Done  64 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:    0.4s finished\n"
+      "[Parallel(n_jobs=4)]: Done   6 out of  10 | elapsed:    0.1s remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done  10 out of  10 | elapsed:    0.1s finished\n"
      ]
     }
    ],
@@ -1149,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,16 +1070,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6172409928119242"
+       "0.6293026513284142"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
