--- a/Project.ipynb
+++ b/Project.ipynb
@@ -300,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_data=app_data[app_data[\"Category\"].isin(listx)]"
+    "app_data.replace(\"Varies with device\",np.NaN,inplace=True)"
    ]
   },
   {
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_data.drop(columns=\"Category\",inplace=True)"
+    "app_data[\"Current Ver\"]=pd.to_numeric(app_data[\"Current Ver\"],errors=\"coerce\")"
    ]
   },
   {
@@ -318,42 +318,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_data.columns\n",
-    "app_data.replace(\"Varies with device\",np.NaN,inplace=True)"
+    "app_data[\"Android Ver\"]=app_data[\"Android Ver\"].str.replace(\" and up\",\"\",regex=True)\n",
+    "app_data=app_data[~app_data[\"Android Ver\"].isin([\"4.0.3 - 7.1.1\",\"5.0 - 8.0\",\"4.1 - 7.1.1\"])]\n",
+    "app_data[\"Android Ver\"].replace({\"4.0.3\":\"4.0\",\"2.3.3\":\"2.3\",\"2.0.1\":\"2.0\"},inplace=True)\n",
+    "app_data[\"Android Ver\"].fillna(4.0,inplace=True)\n",
+    "app_data[\"Current Ver\"].fillna(app_data[\"Current Ver\"].mean(),inplace=True)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "app_data[\"Android Ver\"]=app_data[\"Android Ver\"].str.replace(\" and up\",\"\",regex=True)\n",
-    "app_data=app_data[~app_data[\"Android Ver\"].isin([\"4.0.3 - 7.1.1\",\"5.0 - 8.0\",\"4.1 - 7.1.1\"])]\n",
-    "app_data[\"Android Ver\"].replace({\"4.0.3\":\"4.0\",\"2.3.3\":\"2.3\",\"2.0.1\":\"2.0\"},inplace=True)\n",
-    "app_data.drop(columns=[\"Current Ver\"],inplace=True)\n",
-    "app_data.fillna(4.0,inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3968, 5)"
+       "(4195, 7)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +357,7 @@
        "(64295, 5)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +386,7 @@
        "(37427, 3)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +416,7 @@
        "Index(['App', 'Translated_Review', 'Sentiment'], dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,16 +443,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50100, 7)"
+       "(51946, 9)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,18 +463,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Price', 'Last Updated', 'Android Ver', 'Translated_Review',\n",
-       "       'Sentiment'],\n",
+       "Index(['Category', 'Rating', 'Price', 'Last Updated', 'Current Ver',\n",
+       "       'Android Ver', 'Translated_Review', 'Sentiment'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,13 +486,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_data.drop(columns=\"Category\",inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Price', 'Android Ver', 'Translated_Review', 'Sentiment'], dtype='object')"
+       "Index(['Rating', 'Price', 'Current Ver', 'Android Ver', 'Translated_Review',\n",
+       "       'Sentiment'],\n",
+       "      dtype='object')"
       ]
      },
      "execution_count": 27,
@@ -554,7 +548,7 @@
    "outputs": [],
    "source": [
     "words=[]\n",
-    "for i in app_data.iloc[:,3]:\n",
+    "for i in app_data.iloc[:,4]:\n",
     "    words+=i.split()"
    ]
   },
@@ -566,7 +560,7 @@
     {
      "data": {
       "text/plain": [
-       "1090359"
+       "1115408"
       ]
      },
      "execution_count": 31,
@@ -621,7 +615,7 @@
     {
      "data": {
       "text/plain": [
-       "1090359"
+       "1115408"
       ]
      },
      "execution_count": 33,
@@ -650,7 +644,7 @@
     {
      "data": {
       "text/plain": [
-       "17530"
+       "18194"
       ]
      },
      "execution_count": 35,
@@ -708,7 +702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in app_data.iloc[:,3]:\n",
+    "for i in app_data.iloc[:,4]:\n",
     "    blob=i.split()\n",
     "    data=[]\n",
     "    \n",
@@ -725,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "50100"
+       "51946"
       ]
      },
      "execution_count": 40,
@@ -745,7 +739,9 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Price', 'Android Ver', 'Translated_Review', 'Sentiment'], dtype='object')"
+       "Index(['Rating', 'Price', 'Current Ver', 'Android Ver', 'Translated_Review',\n",
+       "       'Sentiment'],\n",
+       "      dtype='object')"
       ]
      },
      "execution_count": 41,
@@ -813,7 +809,7 @@
    ],
    "source": [
     "oencoder=OneHotEncoder(categorical_features=[0])\n",
-    "labelled=oencoder.fit_transform(app_data.iloc[:,4:].values)"
+    "labelled=oencoder.fit_transform(app_data.iloc[:,5:].values)"
    ]
   },
   {
@@ -824,7 +820,7 @@
     {
      "data": {
       "text/plain": [
-       "(50098, 15)"
+       "(51944, 72)"
       ]
      },
      "execution_count": 47,
@@ -846,7 +842,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Price', 'Android Ver', 'Sentiment'], dtype='object')"
+       "Index(['Rating', 'Price', 'Current Ver', 'Android Ver', 'Sentiment'], dtype='object')"
       ]
      },
      "execution_count": 48,
@@ -877,7 +873,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Price', 'Android Ver'], dtype='object')"
+       "Index(['Price', 'Current Ver', 'Android Ver'], dtype='object')"
       ]
      },
      "execution_count": 50,
@@ -886,7 +882,7 @@
     }
    ],
    "source": [
-    "app_data.iloc[:,1:3].columns"
+    "app_data.iloc[:,1:4].columns"
    ]
   },
   {
@@ -897,7 +893,7 @@
     {
      "data": {
       "text/plain": [
-       "(50100, 1)"
+       "(51946, 3)"
       ]
      },
      "execution_count": 51,
@@ -906,8 +902,8 @@
     }
    ],
    "source": [
-    "features=np.append(features,app_data.iloc[:,1:3].values,axis=1)\n",
-    "app_data.iloc[:,1:2].values.shape"
+    "features=np.append(features,app_data.iloc[:,1:4].values,axis=1)\n",
+    "app_data.iloc[:,1:4].values.shape"
    ]
   },
   {
@@ -918,7 +914,7 @@
     {
      "data": {
       "text/plain": [
-       "(50100, 2002)"
+       "(51946, 2003)"
       ]
      },
      "execution_count": 52,
@@ -971,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -985,10 +981,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "building tree 1 of 10building tree 2 of 10\n",
-      "building tree 3 of 10\n",
+      "building tree 1 of 10building tree 2 of 10building tree 3 of 10building tree 4 of 10\n",
       "\n",
-      "building tree 4 of 10\n",
+      "\n",
+      "\n",
       "building tree 5 of 10\n",
       "building tree 6 of 10\n",
       "building tree 7 of 10\n",
@@ -1001,8 +997,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done   6 out of  10 | elapsed:  7.5min remaining:  5.0min\n",
-      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  9.9min finished\n"
+      "[Parallel(n_jobs=-1)]: Done   7 out of  10 | elapsed:  8.2min remaining:  3.5min\n",
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed: 10.6min finished\n"
      ]
     },
     {
@@ -1013,16 +1009,16 @@
        "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "           min_samples_leaf=1, min_samples_split=2,\n",
        "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=-1,\n",
-       "           oob_score=False, random_state=None, verbose=5, warm_start=False)"
+       "           oob_score=False, random_state=None, verbose=3, warm_start=False)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regressor=RandomForestRegressor(n_estimators=100,verbose=3,n_jobs=-1)\n",
+    "regressor=RandomForestRegressor(n_estimators=10,verbose=3,n_jobs=-1)\n",
     "regressor.fit(X_train,y_train)"
    ]
   },
@@ -1042,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1046,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   6 out of  10 | elapsed:    0.1s remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   7 out of  10 | elapsed:    0.1s remaining:    0.0s\n",
       "[Parallel(n_jobs=4)]: Done  10 out of  10 | elapsed:    0.1s finished\n"
      ]
     }
@@ -1061,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,16 +1066,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6293026513284142"
+       "0.6651681012013817"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,16 +1086,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10107,)"
+       "(10390,)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,16 +1106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10107,)"
+       "(10020,)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
