Added categories as features. Used LabelEncoder and OneHotEncoder. New r_2: 0.77

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_data.drop(columns=\"Category\",inplace=True)"
+    "#app_data.drop(columns=\"Category\",inplace=True)"
    ]
   },
   {
@@ -325,14 +325,96 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140               132\n",
+       "142               NaN\n",
+       "144               NaN\n",
+       "145               NaN\n",
+       "149               NaN\n",
+       "150                10\n",
+       "153        1911805270\n",
+       "155             91363\n",
+       "158              2318\n",
+       "159               225\n",
+       "160               150\n",
+       "161        180531+530\n",
+       "162               NaN\n",
+       "164               506\n",
+       "167                20\n",
+       "168               128\n",
+       "169               608\n",
+       "171                19\n",
+       "172               NaN\n",
+       "173         900950462\n",
+       "175                60\n",
+       "176               305\n",
+       "177                20\n",
+       "178                15\n",
+       "179               NaN\n",
+       "181               253\n",
+       "182              7046\n",
+       "183               115\n",
+       "187               NaN\n",
+       "188               NaN\n",
+       "             ...     \n",
+       "10688             188\n",
+       "10707             NaN\n",
+       "10710             117\n",
+       "10711              15\n",
+       "10712             NaN\n",
+       "10713             NaN\n",
+       "10716              52\n",
+       "10720              52\n",
+       "10723            1021\n",
+       "10726              17\n",
+       "10728             330\n",
+       "10731              87\n",
+       "10732              66\n",
+       "10739    230112650712\n",
+       "10740            4070\n",
+       "10741            0152\n",
+       "10750             124\n",
+       "10753              39\n",
+       "10758              50\n",
+       "10790          320001\n",
+       "10791              10\n",
+       "10792            1381\n",
+       "10795             174\n",
+       "10796           19734\n",
+       "10797             291\n",
+       "10799             172\n",
+       "10809             142\n",
+       "10815            7046\n",
+       "10832              60\n",
+       "10840             NaN\n",
+       "Name: Current Ver, Length: 3973, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "app_data[\"Current Ver\"]=pd.to_numeric(app_data[\"Current Ver\"],errors=\"coerce\")"
+    "app_data[\"Current Ver\"].str.replace(\"[!.]\", \"\", regex=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "app_data[\"Current Ver\"]=pd.to_numeric(app_data[\"Current Ver\"],errors=\"coerce\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3966, 6)"
+       "(3966, 7)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +457,7 @@
        "(64295, 5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +486,7 @@
        "(37427, 3)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +516,7 @@
        "Index(['App', 'Translated_Review', 'Sentiment'], dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,16 +543,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50100, 8)"
+       "(50100, 9)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,18 +563,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Price', 'Last Updated', 'Current Ver', 'Android Ver',\n",
-       "       'Translated_Review', 'Sentiment'],\n",
+       "Index(['Category', 'Rating', 'Price', 'Last Updated', 'Current Ver',\n",
+       "       'Android Ver', 'Translated_Review', 'Sentiment'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,18 +586,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Price', 'Current Ver', 'Android Ver', 'Translated_Review',\n",
-       "       'Sentiment'],\n",
+       "Index(['Category', 'Rating', 'Price', 'Current Ver', 'Android Ver',\n",
+       "       'Translated_Review', 'Sentiment'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,19 +618,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y=app_data.iloc[:,0].values"
+    "y=app_data.iloc[:,1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.5, 4.5, 4.5, ..., 4.5, 4.5, 4.5])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
   },
   {
    "cell_type": "code",
@@ -557,7 +652,7 @@
    "outputs": [],
    "source": [
     "words=[]\n",
-    "for i in app_data.iloc[:,4]:\n",
+    "for i in app_data.iloc[:,5]:\n",
     "    words+=i.split()"
    ]
   },
@@ -711,7 +806,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in app_data.iloc[:,4]:\n",
+    "for i in app_data.iloc[:,5]:\n",
     "    blob=i.split()\n",
     "    data=[]\n",
     "    \n",
@@ -748,8 +843,8 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Price', 'Current Ver', 'Android Ver', 'Translated_Review',\n",
-       "       'Sentiment'],\n",
+       "Index(['Category', 'Rating', 'Price', 'Current Ver', 'Android Ver',\n",
+       "       'Translated_Review', 'Sentiment'],\n",
        "      dtype='object')"
       ]
      },
@@ -786,7 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_data[\"Sentiment\"]=encoder.fit_transform(app_data.iloc[:,2].values)"
+    "app_data[\"Category\"]=encoder.fit_transform(app_data.iloc[:,0].values)"
    ]
   },
   {
@@ -814,11 +909,22 @@
       "/usr/lib/python3.7/site-packages/sklearn/preprocessing/_encoders.py:390: DeprecationWarning: The 'categorical_features' keyword is deprecated in version 0.20 and will be removed in 0.22. You can use the ColumnTransformer instead.\n",
       "  \"use the ColumnTransformer instead.\", DeprecationWarning)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(50100, 23)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "oencoder=OneHotEncoder(categorical_features=[0])\n",
-    "labelled=oencoder.fit_transform(app_data.iloc[:,5:].values)"
+    "labelled=oencoder.fit_transform(app_data.iloc[:,0:1].values)\n",
+    "labelled.shape"
    ]
   },
   {
@@ -829,7 +935,7 @@
     {
      "data": {
       "text/plain": [
-       "(50098, 69)"
+       "(50100, 21)"
       ]
      },
      "execution_count": 50,
@@ -839,8 +945,8 @@
    ],
    "source": [
     "labelled=labelled.toarray()\n",
-    "labelled=labelled[1:-1]\n",
-    "labelled.shape"
+    "labelled=labelled[:,1:-1]\n",
+    "labelled.shape\n"
    ]
   },
   {
@@ -851,7 +957,9 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Price', 'Current Ver', 'Android Ver', 'Sentiment'], dtype='object')"
+       "Index(['Category', 'Rating', 'Price', 'Current Ver', 'Android Ver',\n",
+       "       'Sentiment'],\n",
+       "      dtype='object')"
       ]
      },
      "execution_count": 51,
@@ -871,7 +979,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_data.drop(columns=\"Sentiment\",inplace=True)"
+    "app_data.drop(columns=[\"Sentiment\",\"Category\"],inplace=True)"
    ]
   },
   {
@@ -882,7 +990,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Price', 'Current Ver', 'Android Ver'], dtype='object')"
+       "(50100, 21)"
       ]
      },
      "execution_count": 53,
@@ -891,7 +999,8 @@
     }
    ],
    "source": [
-    "app_data.iloc[:,1:4].columns"
+    "app_data.iloc[:,1:4].columns\n",
+    "labelled.shape"
    ]
   },
   {
@@ -912,6 +1021,7 @@
    ],
    "source": [
     "features=np.append(features,app_data.iloc[:,1:4].values,axis=1)\n",
+    "features=np.append(features,labelled,axis=1)\n",
     "app_data.iloc[:,1:4].values.shape"
    ]
   },
@@ -923,7 +1033,7 @@
     {
      "data": {
       "text/plain": [
-       "(50100, 2003)"
+       "(50100, 2024)"
       ]
      },
      "execution_count": 55,
@@ -969,14 +1079,26 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.1, 4.2, 4.2, ..., 4.4, 4.1, 4.2])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "y_train\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -990,9 +1112,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "building tree 1 of 10building tree 2 of 10building tree 3 of 10\n",
+      "building tree 1 of 10building tree 2 of 10building tree 3 of 10building tree 4 of 10\n",
       "\n",
-      "building tree 4 of 10\n",
+      "\n",
       "\n",
       "building tree 5 of 10\n",
       "building tree 6 of 10\n",
@@ -1006,8 +1128,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done   7 out of  10 | elapsed:  7.4min remaining:  3.2min\n"
+      "[Parallel(n_jobs=-1)]: Done   7 out of  10 | elapsed:  3.1min remaining:  1.3min\n",
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  4.1min finished\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=-1,\n",
+       "           oob_score=False, random_state=None, verbose=3, warm_start=False)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1031,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,16 +1197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6651681012013817"
+       "0.7777247172499013"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,16 +1217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10390,)"
+       "(10020,)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
