--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1068,12 +1068,7 @@
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler=StandardScaler()\n",
-    "X_train=scaler.fit_transform(X_train)\n",
-    "X_test=scaler.transform(X_test)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1092,64 +1087,33 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR\n",
     "y_train\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 4 concurrent workers.\n"
+      "/usr/lib/python3.7/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "building tree 1 of 10building tree 2 of 10building tree 3 of 10building tree 4 of 10\n",
-      "\n",
-      "\n",
-      "\n",
-      "building tree 5 of 10\n",
-      "building tree 6 of 10\n",
-      "building tree 7 of 10\n",
-      "building tree 8 of 10\n",
-      "building tree 9 of 10\n",
-      "building tree 10 of 10\n"
+      "[LibSVM]"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done   7 out of  10 | elapsed:  3.1min remaining:  1.3min\n",
-      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  4.1min finished\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
-       "           max_features='auto', max_leaf_nodes=None,\n",
-       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "           min_samples_leaf=1, min_samples_split=2,\n",
-       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=-1,\n",
-       "           oob_score=False, random_state=None, verbose=3, warm_start=False)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "regressor=RandomForestRegressor(n_estimators=10,verbose=3,n_jobs=-1)\n",
+    "regressor=SVR(verbose=3)\n",
     "regressor.fit(X_train,y_train)"
    ]
   },
